// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton component Matches the snapshot if checked 1`] = `
<div
  className="RadioButton"
>
  <input
    checked={true}
    id="1"
    name="name"
    onChange={[Function]}
    type="radio"
    value={2}
  />
  <label
    htmlFor="1"
  >
    label
  </label>
</div>
`;

exports[`RadioButton component Matches the snapshot if not checked 1`] = `
<div
  className="RadioButton"
>
  <input
    checked={false}
    id="1"
    name="nodejs"
    onChange={[Function]}
    type="radio"
    value={2}
  />
  <label
    htmlFor="1"
  >
    label
  </label>
</div>
`;
